// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringControlRenderer.vue should render component and match snapshot 1`] = `
<div data-app="true"
     class="v-application v-application--is-ltr theme--light"
     id="app"
>
  <div class="v-application--wrap">
    <div id="#"
         class="control"
         appliedoptions="[object Object]"
         errors
         label="My String"
    >
      <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--placeholder input">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-text-field__slot">
              <label for="#-input"
                     class="v-label v-label--active theme--light"
                     style="left: 0px; position: absolute;"
              >
                My String
              </label>
              <input id="#-input"
                     type="text"
              >
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div"
                                     name="message-transition"
                                     class="v-messages__wrapper"
              >
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StringControlRenderer.vue with suggestion should render component and match snapshot 1`] = `
<div data-app="true"
     class="v-application v-application--is-ltr theme--light"
     id="app"
>
  <div class="v-application--wrap">
    <div id="#"
         class="control"
         appliedoptions="[object Object]"
         errors
         label="Select Continent"
    >
      <div class="v-input theme--light v-text-field v-text-field--placeholder v-select v-autocomplete input">
        <div class="v-input__control">
          <div role="combobox"
               aria-haspopup="listbox"
               aria-expanded="false"
               aria-owns="list-150"
               class="v-input__slot"
          >
            <div class="v-select__slot">
              <label for="#-input"
                     class="v-label theme--light"
                     style="left: 0px; position: absolute;"
              >
                Select Continent
              </label>
              <input id="#-input"
                     type="text"
                     autocomplete="off"
              >
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-menu-down theme--light"
                  >
                  </i>
                </div>
              </div>
              <input type="hidden">
            </div>
            <div class="v-menu">
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div"
                                     name="message-transition"
                                     class="v-messages__wrapper"
              >
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StringControlRenderer.vue with suggestion should render component and match snapshot when clicked 1`] = `
<div data-app="true"
     class="v-application v-application--is-ltr theme--light"
     id="app"
>
  <div class="v-application--wrap">
    <div id="#"
         class="control"
         appliedoptions="[object Object]"
         errors
         label="Select Continent"
         isfocused="true"
    >
      <div class="v-input v-input--is-focused theme--light v-text-field v-text-field--placeholder v-select v-select--is-menu-active v-autocomplete primary--text input">
        <div class="v-input__control">
          <div role="combobox"
               aria-haspopup="listbox"
               aria-expanded="true"
               aria-owns="list-163"
               class="v-input__slot"
          >
            <div class="v-select__slot">
              <label for="#-input"
                     class="v-label v-label--active theme--light primary--text"
                     style="left: 0px; position: absolute;"
              >
                Select Continent
              </label>
              <input id="#-input"
                     type="text"
                     autocomplete="off"
                     placeholder="Enter your continent"
              >
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-menu-down theme--light primary--text"
                  >
                  </i>
                </div>
              </div>
              <input type="hidden">
            </div>
            <div class="v-menu">
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light primary--text">
              <transition-group-stub tag="div"
                                     name="message-transition"
                                     class="v-messages__wrapper"
              >
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
       style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; display: none;"
  >
    <div role="listbox"
         tabindex="-1"
         class="v-list v-select-list v-sheet theme--light theme--light"
         id="list-163"
    >
      <div tabindex="0"
           aria-selected="false"
           id="list-item-169-0"
           role="option"
           class="v-list-item v-list-item--link theme--light"
      >
        <div class="v-list-item__content">
          <div class="v-list-item__title">
            Asia
          </div>
        </div>
      </div>
      <div tabindex="0"
           aria-selected="false"
           id="list-item-169-1"
           role="option"
           class="v-list-item v-list-item--link theme--light"
      >
        <div class="v-list-item__content">
          <div class="v-list-item__title">
            Africa
          </div>
        </div>
      </div>
      <div tabindex="0"
           aria-selected="false"
           id="list-item-169-2"
           role="option"
           class="v-list-item v-list-item--link theme--light"
      >
        <div class="v-list-item__content">
          <div class="v-list-item__title">
            Europe
          </div>
        </div>
      </div>
      <div tabindex="0"
           aria-selected="false"
           id="list-item-169-3"
           role="option"
           class="v-list-item v-list-item--link theme--light"
      >
        <div class="v-list-item__content">
          <div class="v-list-item__title">
            North America
          </div>
        </div>
      </div>
      <div tabindex="0"
           aria-selected="false"
           id="list-item-169-4"
           role="option"
           class="v-list-item v-list-item--link theme--light"
      >
        <div class="v-list-item__content">
          <div class="v-list-item__title">
            South America
          </div>
        </div>
      </div>
      <div tabindex="0"
           aria-selected="false"
           id="list-item-169-5"
           role="option"
           class="v-list-item v-list-item--link theme--light"
      >
        <div class="v-list-item__content">
          <div class="v-list-item__title">
            Australia/Oceania
          </div>
        </div>
      </div>
      <div tabindex="0"
           aria-selected="false"
           id="list-item-169-6"
           role="option"
           class="v-list-item v-list-item--link theme--light"
      >
        <div class="v-list-item__content">
          <div class="v-list-item__title">
            Antarctica
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
